# images_alignment

./: README.md  app.py  doc_requirements.txt  environment.yml  example.py  example_servable.py  images_registration.ipynb  images_registration.py  panelserverextension.py  postBuild  pyproject.toml  requirements.txt  test.ipynb
.github/workflow/: gen_doc.yml
.github/workflows/: gen_doc.yml  tests.yml
doc/: README.md
doc/source/: conf.py
examples/: example.py  example_appli.py  utils.py
images_alignment/: __init__.py  alignment.py  utils.py
images_alignment/application/: app.py  app_panel.py  app_tkinter.py  callbacks.py  utils.py  view.py
images_alignment/examples/: example.py  example_appli.py  example_panel.py  example_servable.py  example_tkinter.py  utils.py
images_alignment/tests/: test_alignment.py
images_registration/application/: app.py
images_registration/examples/: example.py
src/: app.ipynb  app.py
tests/: test_alignment.py
