[build-system]
requires = ['setuptools>=42']
build-backend = 'setuptools.build_meta'

[project]
name = "images_alignment"
version = "2024.2beta"
description = "images alignment application"
authors = [{ name = "Patrick Quéméré", email = "patrick.quemere@cea.fr" }]
readme = "README.md"
homepage = "https://github.com/CEA-MetroCarac/images_registration"
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "matplotlib",
    "imageio",
    "tifffile",
    "scikit-image",
    "pystackreg"
]

[project.scripts]
images_alignment = 'images_alignment.application.app:launcher'

[project.urls]
name = "images_alignment"
url = "https://github.com/CEA-MetroCarac/images_registration"
priority = "primary"
