[build-system]
requires = ['setuptools>=42']
build-backend = 'setuptools.build_meta'

[project]
name = "images_alignment"
version = "2025.1"
description = "images alignment application"
authors = [{ name = "Patrick Quéméré", email = "patrick.quemere@cea.fr" }]
readme = "README.md"
requires-python = ">= 3.8"
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy",
    "matplotlib",
    "imageio",
    "tifffile",
    "scikit-image",
    "pystackreg",
    "PySide6"
]

[project.scripts]
images_alignment = 'images_alignment.application.app:launcher'

[project.urls]
name = "images_alignment"
url = "https://github.com/CEA-MetroCarac/images_alignment"
priority = "primary"
